<resources>
    <string name="app_name">Sonagi</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="pw_pass">비밀번호 확인</string>
    <string name="login">로그인</string>
    <string name="id_pw">아이디/비밀번호 찾기</string>
    <string name="sign_up">회원가입</string>
    <string name="name">이름</string>
    <string name="protector">보호자</string>
    <string name="ward">피보호자</string>
    <string name="duplicate">중복확인</string>
    <string name="registration_method">사용자 등록 방법</string>
    <string name="method">앱 이용 방법</string>
    <string name="using">앱 사용하기기➔</string>
    <string name="health_information">건강정보</string>
    <string name="now">현재시간:</string>
    <string name="registration_m">사용자 등록 방법</string>
    <string name="methodOfUse">앱 사용 방법</string>
    <string name="setting">설정</string>
</resources>