<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_weight="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/sonaji"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@null"
        android:src="@drawable/main" />

<!--아이디-->
    <EditText
        android:id="@+id/login_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/id"
        android:autofillHints="no" />

 <!--비밀번호-->
    <EditText
        android:id="@+id/login_pw"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pw"
        android:autofillHints="no" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="#FFFFFF"
        android:orientation="horizontal">

<!--로그인-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/black" />

        <View
            android:background="#673AB7"
            android:layout_width="3dp"
            android:layout_height="20dp"/>

<!--아이디/비밀번호 찾기-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/id_pw"
            android:textColor="@color/black"/>

        <View
            android:background="#673AB7"
            android:layout_width="3dp"
            android:layout_height="20dp"/>

<!--회원가입-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/black" />


    </LinearLayout>

</>